--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 
  body {
    position: fixed;
-   background-image: url(image/DeWatermark.ai_1721457245358.png);
+   background-image: url(DeWatermark.ai_1721457245358.png);
    background-repeat: no-repeat;
 
    height: 100%;
